# chess-engine

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  config.yaml
app/: __main__.py  game.py
app/player/: ai.py  base.py  human.py
app/tests/: test_game.py
app/ui/: base.py  cli.py  gui.py  tui.py
chess/: Cargo.toml
chess/src/: bitboard.rs  constants.rs  lib.rs  main.rs  pieces.rs  position.rs  types.rs
chess/src/repr/: bitboard.rs  mod.rs  pieces.rs
engine/: Cargo.toml
engine/benches/: benchmark.rs
engine/src/: evaluation.rs  lib.rs  main.rs  uci.rs
pychess/: Cargo.toml
pychess/src/: lib.rs
