[package]
name = "chess"
version = "0.1.0"
authors = ["Florin-Vlad Sabau <sabauflorin28@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
lazy_static = "1.4.0"
colored = "2"
strum = "0.2"
strum_macros = "0.2"
