[package]
name = "engine"
version = "0.1.0"
authors = ["Florin-Vlad Sabau <sabauflorin28@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.0"
chess = { path = "../chess" }

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "benchmark"
harness = false
